[gd_scene load_steps=2 format=3 uid="uid://cqxg727fvr1rd"]

[ext_resource type="Script" path="res://ui-toolkit/number_edit.gd" id="1_7s8hw"]

[node name="NumberEditor" type="LineEdit"]
offset_right = 67.0625
offset_bottom = 31.0
text = "0"
placeholder_text = "0"
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("1_7s8hw")

[node name="Slider" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color(0, 0, 0, 1)

[node name="Cursor" type="ColorRect" parent="Slider"]
custom_minimum_size = Vector2(10, 5)
layout_mode = 0
offset_right = 10.0
offset_bottom = 5.0
mouse_filter = 1

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="text_submitted" from="." to="." method="_on_text_submitted"]
